--- a/history.txt
+++ b/history.txt
@@ -33,3 +33,6 @@ A mere 5 SPUs later, Green Team conquered Canada. Historians marked this as the 
 At SPU 92, Red Team slowly crept downward with their new-claimed territory of Romania. They obtained control of Bulgaria and began stockpiling military near Ukraine, on the cutting edge of the Blue Team's forces.
 1 SPU before, Green Team took both Greenland and the USA. Red Team no longer had one front to fight on anymore.
 1 SPU after, Red Team took control of Algeria.
+
+Over the course of the next few turns, Green Team ran completely unopposed throughout the Americas. Having seized Mexico, Cuba, and Venezuela, a strong foothold was gained within the Americas that alowed Green Team a heavily fortified base.
+Meanwhile, Red Team began their conquest throughout Africa. Under General Tymewalk's command, they moved units into Libya and the Western Sahara, nearly ensuring that the tipping point of Egypt would be theirs. They also fortified their position in the Baltics by reinforcing Bulgaria and capturing Turkey.
